--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-    <link rel="icon" href="./assets/images/icons/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./assets/reset.css">
+    <link rel="icon" href="./assets/images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
 
-    <script src="script.js" async defer></script>
+    <script src="./script.js" async defer></script>
 </body>
 
 </html>
